# AetherGUI

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.fa.md  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: GUIDE.fa.md
scripts/: build-frontend.mjs  dev-server.mjs  fetch-aether.ps1  fetch-routing-engine.ps1  prepare-sidecar.mjs
src/: app.js  docs.js  i18n.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  process.rs  routing.rs  settings.rs
src-tauri/windows/: hooks.nsh
tests/: frontend.test.mjs
